[package]
name = "imperator-save"
version = "0.4.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2021"
exclude = ["/assets/*", "/fuzz/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rakaly/imperator-save.git"
description = "Ergonomically work with Imperator Rome saves (debug and ironman)"
keywords = ["imperator", "ironman"]
categories = ["parsing"]

[features]
default = ["miniz"]
miniz = ["miniz_oxide"]
libdeflate = ["libdeflater/freestanding"]
serialize = []

[dependencies]
jomini = { version =  "0.19", features = ["json"] }
zip = { version =  "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
libdeflater = { version = "0.10", optional = true }
miniz_oxide = { version = "0.6", optional = true }
thiserror = "1"

[dev-dependencies]
attohttpc = "0.19"
zip = { version =  "0.6", default-features = false, features = ["deflate"] }

# We override the test profile so that our tests run in a tolerable time as
# some of the asset files are heavyweight and can take a significant amount of
# time. Here is some timing data recorded to run one test:
#
# cargo test                 0m15.037s
# cargo test (opt-level=3)   0m9.644s
# cargo test (+lto=thin)     0m0.907s
# cargo test --release       0m0.620s
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
